--- a/page2.html
+++ b/page2.html
@@ -3,7 +3,7 @@
 		<title>Hello, GitHub Pages</title>
 	</head>
 	<body>
-		<h3>Hello there!</h3>
-		<p>It's html version</p>
+		<h3>Hello again!</h3>
+		<p>Page 2</p>
 	</body>
 </html>
